--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ const escudos = [
       "pasto", "aguilas", "b.chico", "fortaleza", "llaneros",  
       "u.magdalena","atletico_fc","barranquilla",
       "boca_jrs._cali","bogota","cucuta",
-      "yumbo_del_valle","inter_palmira","jaguares",
+      "ind.yumbo","inter_palmira","jaguares",
       "leones","orsomarso","patriotas","quindio",
       "real_cartagena","r.cundinamarca","r.santander",
       "tigres"
