--- a/simulador.html
+++ b/simulador.html
@@ -809,7 +809,7 @@
     <h2 id="modalTitulo">📅 Fecha</h2>
     <pre id="modalContenido"></pre>
     <div>
-      <button id="btnSiguiente">Siguiente</button>
+      <button id="btnSiguientes">Siguiente</button>
     </div>
   </div>
 </div>
